--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@types/node": "^24.10.1",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^19.2.7",
+    "antd": "^6.1.1",
     "next": "^16.0.6",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
